Your commit message

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -250,22 +250,32 @@ h6 {
     padding-right: 0;
   }
 
-  .navmenu a,
-  .navmenu a:focus {
+  
+  .navmenu a, .navmenu a:focus {
     color: var(--nav-color);
+    /* background-color: white; */
+    color: black !important;
+    padding: 0px 0px;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 16px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: all 0.3s ease;
     font-size: 14px;
-    padding: 0 2px;
+    /* padding: 0 2px; */
     font-family: var(--nav-font);
     font-weight: 500;
-    display: flex;
+    display: flex
+;
     align-items: center;
     justify-content: space-between;
     white-space: nowrap;
     transition: 0.3s;
     position: relative;
     text-transform: uppercase;
-  }
-
+}
+}
   .navmenu a i,
   .navmenu a:focus i {
     font-size: 12px;
@@ -677,7 +687,6 @@ h6 {
 }
 
 .scroll-top.active {
-  visibility: visible;
   opacity: 1;
 }
 
